Agregando etiqueta </h4> faltante que distorcionaba diseño en IE

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -131,7 +131,7 @@
                                                     if (isset($OP_tipoHabi[2]) && $OP_tipoHabi[2] != '') {
                                                         echo 'Habitacion 3: ' . $OP_tipoHabi[2] . '<br>';
                                                     }
-                                                    ?>"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getPrecioDesde()); ?></b></span>
+                                                    ?>"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getPrecioDesde()); ?></b></h4></span>
                                         </div>
                                     </a>
 
