--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -9,7 +9,9 @@
     .td-background2{background-color: #ffffff;}
 
 </style>
-<div id="page-content">
+
+<?php if(Session::get('sess_iframe')){$sty_tc=""; } else { $sty_tc="margin-top:55px;"; } ?>
+<div id="page-content" style="<?php echo $sty_tc ?>">
     <div id='wrap'>
         <div id="page-heading">
             <ol class="breadcrumb">
