--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+$(function ()
+{
+    $("#txtNombre_pago").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+    $("#txtApellidos_pago").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+    $("#txtTelefono_pago").validaCampos('0123456789');
+});
+</script>
 <form enctype="multipart/form-data" class="frmReservaPRG">
     <div class="panel panel-info">
         <div class="panel-heading">
@@ -58,10 +66,10 @@
     </tr>
     
     <tr align="center">
-        <td><input type="text" name="nombre_compr" id="nombre_compr"></td>
-        <td><input type="text" name="apellidos_compr" id="apellidos_compr"></td>
-        <td><input type="text" name="email_compr" id="email_compr"></td>
-        <td><input type="text" name="telefono_compr" id="telefono_compr"></td>
+        <td><input type="text" name="txtNombre_pago" id="txtNombre_pago"></td>
+        <td><input type="text" name="txtApellidos_pago" id="txtApellidos_pago"></td>
+        <td><input type="text" name="txtEmail_pago" id="txtEmail_pago"></td>
+        <td><input type="text" name="txtTelefono_pago" id="txtTelefono_pago"></td>
     </tr>
     
     </table>
@@ -135,16 +143,16 @@
                                name="rP_txtRut_<?php echo $rP_cntRegistros; ?>" style="width:80px;">
                     </td>
                     <td>
-                        <input type="text" 
-                               id="rP_txtNom_<?php echo $rP_cntRegistros; ?>" 
-                               name="rP_txtNom_<?php echo $rP_cntRegistros; ?>" style="width:100px;">
+                        <input type="text" id="rP_txtNom_<?php echo $rP_cntRegistros; ?>" name="rP_txtNom_<?php echo $rP_cntRegistros; ?>" style="width:100px;">
                     </td>
                     <td><input type="text" id="rP_txtApe_<?php echo $rP_cntRegistros; ?>" name="rP_txtApe_<?php echo $rP_cntRegistros; ?>" style="width:100px;"></td>
                     <td>
                         <script type="text/javascript">
-			$("#telefono_compr").validaCampos('0123456789');
                             $(function ()
                             {
+                                $("#rP_txtNom_<?php echo $rP_cntRegistros; ?>").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+                                $("#rP_txtApe_<?php echo $rP_cntRegistros; ?>").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+                                
                                 $("#rP_FechaNac_<?php echo $rP_cntRegistros; ?>").datepicker({
                                 changeMonth: true,
                                         changeYear: true,
@@ -222,6 +230,9 @@ Session::set('sessRP_cntPasajeros', $rP_cntRegistros);
                         <script type="text/javascript">
                             $(function ()
                             {
+                                $("#rP_txtNomInf_<?php echo $rP_cntRegistros; ?>").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+                                $("#rP_txtApeInf_<?php echo $rP_cntRegistros; ?>").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+                                
                                 $("#rP_FechaNacInf_<?php echo $i; ?>").datepicker({
                                     changeMonth: true,
                                     changeYear: true,
