Cambios realizados para el paso del sitio a produccion

--- a/views/booking/consultarReserva.phtml
+++ b/views/booking/consultarReserva.phtml
@@ -188,7 +188,7 @@ $(function()
                                             elseif($cR_estado<>'N' && $valorPago >= ($valorVenta -1))
                                             {
                                                 $imgStatus= '<img src="'.$_layoutParams['ruta_img'].'st_verde.png" title="Pago realizado" />';
-                                                $voucherStatus='<a href="'. BASE_URL .'booking/verPDF_HTML/'.$cR_nFile.'" target="_blank" onclick="window.open(this.href, this.target, \'width=896, height=600,left = 200,top = 100\'); return false;">
+                                                $voucherStatus='<a href="'. BASE_URL .'booking/voucher/'.$cR_nFile.'" target="_blank" onclick="window.open(this.href, this.target, \'width=896, height=600,left = 200,top = 100\'); return false;">
                                                 <img src="'.$_layoutParams['ruta_img'].'pdf.png" alt="edit" width="24" border="0" />
                                                 </a>';
                                             }
