--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -29,6 +29,13 @@ if ($this->objOpcBloqueos) {
                         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="24px" alt="Condiciones generales" title="Condiciones generales" />
                         </a>
 
+                        <?php } if($objOpcProg->getNota()) { ?>
+
+                        <a data-toggle="modal" href="#myModal" 
+                        onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/condicionesGenerales', 'tituloFormPRG', 'Condiciones generales', '<?php echo $objOpcProg->getId(); ?>','<?php echo $this->form;?>');">
+                        <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="24px" alt="Condiciones generales" title="Condiciones generales" />
+                        </a>
+
                         <?php } if($objOpcProg->getItiVuelo()) { ?>
 
                         <a data-toggle="modal" href="#myModal" 
@@ -171,7 +178,7 @@ if ($this->objOpcBloqueos) {
 
             <?php if ($objOpcProg->getNotaOpc()) { ?>
                         <a data-toggle="modal" href="#myModal" 
-                           onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloFormPRG', 'Nota de Programa', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');">
+                           onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloFormPRG', 'Nota de opcion de programa', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');">
                             <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="20px" alt="Notas" title="Notas" />
                         </a>
             <?php } ?>
