--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -22,13 +22,12 @@ if ($this->objOpcBloqueos) {
             <h4> Salida: <?php echo Functions::invertirFecha($objOpcProg->getDesde(), "/", "/"); ?> </h4>
             <div class="options">
                     <i>
-                        <?php if($objOpcProg->getNota()) { ?>
+                        <?php if($objOpcProg->getPDF()) { ?>
 
-                        <a data-toggle="modal" href="#myModal" 
-                        onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/condicionesGenerales', 'tituloFormPRG', 'Condiciones generales', '<?php echo $objOpcProg->getId(); ?>','<?php echo $this->form;?>');">
-                        <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="24px" alt="Condiciones generales" title="Condiciones generales" />
+                        <a href="<?php echo $objOpcProg->getPDF(); ?>" target="_blank">
+                            <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>pdf.png" width="24px" />
                         </a>
-
+                        
                         <?php } if($objOpcProg->getNota()) { ?>
 
                         <a data-toggle="modal" href="#myModal" 
