Optimizando el despliege de los textos de tipo habitación en la base correspondiente

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -17,7 +17,7 @@
     <div id='wrap'>
         <div id="page-heading">
             <ol class="breadcrumb">
-                <li><a href="<?php echo BASE_URL . 'system'; ?>">Inicio</a></li>
+                <li><a href="<?php if($this->form==''){ echo BASE_URL . 'system'; } ?>">Inicio</a></li>
                 <li class="active">Busqueda de bloqueos</li>
             </ol>
             <h3 style="margin-left: 18px;">BLOQUEOS EN <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
