--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -20,7 +20,7 @@
                 <li><a href="<?php if($this->form==''){ echo BASE_URL . 'system'; } ?>">Inicio</a></li>
                 <li class="active">Busqueda de bloqueos</li>
             </ol>
-            <h3 style="margin-left: 18px;">BLOQUEOS EN <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
+            <h3 style="margin-left: 18px;">PROGRAMAS CON AEREO CONFIRMADO EN <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
 
         </div>
         <div class="container">
@@ -119,31 +119,54 @@
                                 <div class="panel panel-default">
 
                                     <a id="id_collapse" data-toggle="collapse" data-parent="#accordion" href="#collapse<?php echo $cnt ?>" onclick="detectedCollapsed('collapse<?php echo $cnt ?>', 'opcionesPrograma<?php echo $cnt ?>', '<?php echo $objProg->getId(); ?>', '<?php echo $this->form; ?>')">
-                                        <div class="panel-heading">
-                                            <span style="float: left;">
-                                                <img src="<?php echo $_layoutParams['ruta_img']; ?>down.png" width="12px">
-                                            </span>
-                                            <h4 name="tooltip_blo" title="<?php echo $objProg->getNombre(); ?><br> Para mayor informaci&oacute;n haga click">&nbsp;&nbsp;&nbsp;<?php echo substr($objProg->getNombre(), 0, 40) . '...' ?>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; F.&nbsp; Desde :&nbsp;&nbsp;<b>
-                                                <?php if($objProg->getDesde()){echo Functions::invertirFecha($objProg->getDesde(), "/", "/");} ?></b></h4>
-                                            <span class="pull-right"><h4>Desde : <b name="tooltip_blo" title="<?php
-                                                    if (isset($OP_tipoHabi[0]) && $OP_tipoHabi[0] != '') {
-                                                        echo 'Habitacion 1: ' . $OP_tipoHabi[0] . '<br>';
-                                                    }
-                                                    if (isset($OP_tipoHabi[1]) && $OP_tipoHabi[1] != '') {
-                                                        echo 'Habitacion 2: ' . $OP_tipoHabi[1] . '<br>';
-                                                    }
-                                                    if (isset($OP_tipoHabi[2]) && $OP_tipoHabi[2] != '') {
-                                                        echo 'Habitacion 3: ' . $OP_tipoHabi[2] . '<br>';
-                                                    }
-                                                    ?>"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getPrecioDesde()); ?></b></h4></span>
+                                        <div class="panel-heading" style="background: #e6e7e8; height: 105px;  color: #033d7d;">
+                                            <table style="width:100%;" >
+                                                <tr>
+                                                    <td style="width:150px;" rowspan="4" align="center">
+                                                        <img src="<?php echo $_layoutParams['ruta_programas'].$objProg->getImagen(); ?>" height="100px">
+                                                    </td>
+                                                    <td style="line-height: 16px; vertical-align:bottom;"><span name="tooltip_blo" style="color: #033d7d;" title="<?php echo $objProg->getNombre(); ?><br> Para mayor informaci&oacute;n haga click"><?php echo $objProg->getNombre(); ?></span></td>
+                                                    <td style="line-height: 16px; font-size: 14px; width: 200px; vertical-align: bottom" align="right">
+                                                        Valor Total Desde : <b name="tooltip_blo" title="<?php
+                                                            for($i = 0; $i < 3; $i++) {
+                                                                if (isset($OP_tipoHabi[$i]) && $OP_tipoHabi[$i] != '') {
+                                                                    echo 'Habitacion '.($i+1).': ' . $OP_tipoHabi[$i] . '<br>';
+                                                                }
+                                                            }
+                                                            ?>"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getPrecioDesde()); ?></b> <br>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="line-height: 12px; font-size: 12px; vertical-align: top;">
+                                                        <b><?php echo ($objProg->getNoches()+1).' dias ' . $objProg->getNoches() . ' noches'; ?></b>
+                                                        <br><span>Salida Desde :&nbsp;&nbsp;</span><b><?php if($objProg->getDesde()){echo Functions::invertirFecha($objProg->getDesde(), "/", "/");} ?></b></td>
+                                                    <td rowspan="3" style="vertical-align: bottom; font-size: 13px; width: 200px; line-height: 12px;" align="right">
+                                                        <input type="button" class="btn btn-primary btn-sm" style="margin-right:5px" value="Ver programa">
+                                                    </td>
+                                                </tr>
+                                                
+                                                <tr>
+                                                    <td style="line-height: 15px; font-size: 12px;"><b>Precio total en base a</b> <?php $tmp=''; for($i = 0; $i < 3; $i++) {
+                                                                if (isset($OP_tipoHabi[$i]) && $OP_tipoHabi[$i] != '') {
+                                                                    echo $tmp.' Habitacion '.($i+1).': ' . $OP_tipoHabi[$i];
+                                                                    $tmp='+';
+                                                                }
+                                                            } ?></td>
+                                                </tr>
+                                                
+                                            </table>
+                                            
+                                            
+                                            
+                                            
                                         </div>
                                     </a>
 
-                                    <div id="collapse<?php echo $cnt ?>" class="panel-collapse collapse">
+                                    <div id="collapse<?php echo $cnt; ?>" class="panel-collapse collapse">
                                         <div class="panel-body">
 
                                             <div class="col-md-6" style="width:100%;">
-                                                <div class="panel panel-grape" id="opcionesPrograma<?php echo $cnt ?>">
+                                                <div class="panel panel-grape" id="opcionesPrograma<?php echo $cnt; ?>">
 
                                                 </div>
 
