Optimizando diseño de bloqueo para los navegadores Mozilla y IE

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -118,7 +118,7 @@
         <!-- <form class="frmOpcionesPRG_<?php echo $cnt; ?>"> -->
                                 <div class="panel panel-default">
 
-                                    <a id="id_collapse" data-toggle="collapse" data-parent="#accordion" href="#collapse<?php echo $cnt ?>" onclick="detectedCollapsed('collapse<?php echo $cnt ?>', 'opcionesPrograma<?php echo $cnt ?>', '<?php echo $objProg->getId(); ?>', '<?php echo $this->form; ?>')">
+                                    <a id="id_collapse" style="text-decoration: none;" data-toggle="collapse" data-parent="#accordion" href="#collapse<?php echo $cnt ?>" onclick="detectedCollapsed('collapse<?php echo $cnt ?>', 'opcionesPrograma<?php echo $cnt ?>', '<?php echo $objProg->getId(); ?>', '<?php echo $this->form; ?>')">
                                         <div class="panel-heading" style="background: #e6e7e8; height: 105px;  color: #033d7d;">
                                             <table style="width:100%;" >
                                                 <tr>
