Ajustando tamaño maximo permitido de imagen de programa en los bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -123,7 +123,7 @@
                                             <table style="width:100%;" >
                                                 <tr>
                                                     <td style="width:150px;" rowspan="4" align="center">
-                                                        <img src="<?php echo $_layoutParams['ruta_programas'].$objProg->getImagen(); ?>" height="100px">
+                                                        <img src="<?php echo $_layoutParams['ruta_programas'].$objProg->getImagen(); ?>" height="100px" style="max-width: 130px;">
                                                     </td>
                                                     <td style="line-height: 16px; vertical-align:bottom;"><span name="tooltip_blo" style="color: #033d7d;" title="<?php echo $objProg->getNombre(); ?><br> Para mayor informaci&oacute;n haga click"><?php echo $objProg->getNombre(); ?></span></td>
                                                     <td style="line-height: 16px; font-size: 14px; width: 200px; vertical-align: bottom" align="right">
