Utilizando file_get_contents para obtener las condiciones generales de cada cliente

--- a/views/condiciones/panamericana.phtml
+++ b/views/condiciones/panamericana.phtml
@@ -1,15 +1,5 @@
-<?php
-
-/* 
- * Proyecto : Euroandino.net
- * Autor    : Tsyacom Ltda.
- * Fecha    : Miercoles, 10 de octubre de 2014
- */
-?>
-
-
-<center><span style="font-weight: bold;">CONDICIONES GENERALES BLOQUEOS Y CHARTER</span></center><br />
-    <ul type="disc">
+<center><span style='font-weight: bold;'>CONDICIONES GENERALES BLOQUEOS Y CHARTER</span></center><br />
+    <ul type='disc'>
      <!-- <li>Los precios publicados incluyen solo lo especificado en cada programa. Los servicios no utilizados no ser&aacute;n reembolsables.</li>
       <li>Una vez confirmada la       reserva, se solicitar&aacute; el pago total o un abono m&iacute;nimo de <strong>USD 450.- por pasajero para Sudam&eacute;rica, USD 650.-       Caribe, USA, Isla de Pascua,&nbsp; USD 1.200.-       Europa</strong>, &eacute;stos deben ser pagados dentro de las 48 horas de       recibida la confirmaci&oacute;n, de lo contrario se anular&aacute; la reserva       autom&aacute;ticamente.&nbsp; El saldo deber&aacute; ser pagado en su totalidad a m&aacute;s       tardar 10 d&iacute;as h&aacute;biles a contar del recibo del abono.&nbsp; En caso de       haberse confirmado la reserva 35 d&iacute;as antes de la salida, el pago deber&aacute;       ser total.&nbsp; </li> -->
       <li><u>Bloqueos       a&eacute;reos: </u><br />
